Fix blockquote with aligned image
Fixed: Blockquote when inserted after an image aligned left or right.

Fixes https://github.com/maithemewp/mai-theme-engine/issues/184

--- a/assets/css/mai-theme.css
+++ b/assets/css/mai-theme.css
@@ -262,6 +262,7 @@ hr {
 
 blockquote {
 	position: relative;
+	clear: both;
 	background-color: rgba(0, 0, 0, 0.03);
 	border-left: 32px solid rgba(0, 0, 0, 0.03);
 	color: rgba(0,0,0,0.6);
